--- a/modulo_5/lab3/package.json
+++ b/modulo_5/lab3/package.json
@@ -13,6 +13,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-htmlmin": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.4.2"
   }
